--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -52,4 +52,5 @@ junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.r
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version = "2.0.21-1.0.28" }
 
